; ModuleID = '/home/carl/AnghaBench/php-src/ext/opcache/jit/extr_zend_jit_perf_dump.c_zend_perf_timestamp.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/opcache/jit/extr_zend_jit_perf_dump.c_zend_perf_timestamp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timespec = type { i32, i64 }

@CLOCK_MONOTONIC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @zend_perf_timestamp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @zend_perf_timestamp() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.timespec, align 8
  %3 = load i32, i32* @CLOCK_MONOTONIC, align 4
  %4 = call i64 @clock_gettime(i32 %3, %struct.timespec* %2)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %7

6:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %15

7:                                                ; preds = %0
  %8 = getelementptr inbounds %struct.timespec, %struct.timespec* %2, i32 0, i32 1
  %9 = load i64, i64* %8, align 8
  %10 = trunc i64 %9 to i32
  %11 = mul nsw i32 %10, 1000000000
  %12 = getelementptr inbounds %struct.timespec, %struct.timespec* %2, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  %14 = add nsw i32 %11, %13
  store i32 %14, i32* %1, align 4
  br label %15

15:                                               ; preds = %7, %6
  %16 = load i32, i32* %1, align 4
  ret i32 %16
}

declare dso_local i64 @clock_gettime(i32, %struct.timespec*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
